src/test/deca/syntax/invalid/decaObjet/extends/00coma.deca
// Description:
//    Programme déclarant une classe qui étend une classe inconnue
//
// Resultats:
//    00extendsUnknown.deca:10:12:
//
// Historique:
//    cree le 15/06/2022

class A extends B, C {}